--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,7 +10,6 @@ dependencies:
   carousel_slider: ^4.0.0
   cupertino_icons: ^1.0.2
   firebase_messaging:
-  firebase_core:  
   cloud_firestore:
   flutter_local_notifications: ^13.0.0
   flutter:
@@ -24,15 +23,13 @@ dependencies:
   lottie: ^1.2.1
   photo_view: ^0.13.0
   pull_to_refresh: ^2.0.0
-  restart_app: ^1.1.0
-  persistent_bottom_nav_bar: ^4.0.2
   share: any
   url_launcher: 6.1.6
   step_progress_indicator: ^1.0.1
   vibration: ^1.7.5
-  image_picker: ^0.8.4+4 
   permission_handler:
   dotted_border: ^2.0.0+1
+  chips_choice: ^3.0.0
 
 dev_dependencies:
   flutter_test:
@@ -44,7 +41,6 @@ flutter:
     - assets/icons/
     - assets/lottie/
     - assets/image/
-    - assets/image/banners/
 
   fonts:
     - family: GilroyBold
