--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -3,7 +3,7 @@ version: 1.0.0+1
 publish_to: none
 description: A new Flutter project.
 environment:
-  sdk: '>=2.18.6 <3.0.0'
+  sdk: ">=2.18.6 <3.0.0"
 
 dependencies:
   cached_network_image: any
@@ -15,16 +15,16 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_iconly: ^1.0.2
-  firebase_core_platform_interface: 
+  firebase_core_platform_interface:
   flutter_staggered_grid_view: ^0.4.0
   get: 4.6.5
-  get_storage: 2.0.3
+  get_storage: ^2.1.1
   http: any
-  lottie: ^1.2.1
-  photo_view: ^0.13.0
+  lottie: ^2.3.2
+  photo_view: ^0.14.0
   pull_to_refresh: ^2.0.0
   share: any
-  url_launcher: 6.1.6
+  url_launcher: ^6.1.10
   step_progress_indicator: ^1.0.1
   vibration: ^1.7.5
   permission_handler:
